--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <div class="main_content">
         <div class="sweets_left_side">
             <div class="sweets_title">
-                <h1>Цукерочки</h1>
+                <h1 class="headline">Цукерочки</h1>
                 <img src="./img/logo.svg" alt="logo">
             </div>
             <p class="description">
@@ -20,103 +20,115 @@
                 найцікавіше
                 в одному листі раз на тиждень.
             </p>
-            <hr>
+            <hr class="main_hr">
             <form class="form_for_mail">
-                <label for="mailInput">Отримуйте першим нові цукерочки <img src="./img/fire.svg" alt=""></label>
+                <label class="label_mail" for="mail_input">Отримуйте першим нові цукерочки
+                  <img src="./img/fire.svg" alt="">
+                </label>
                 <div class="container_for_mail">
-                    <input  type="email" id="mailInput" placeholder="Ваш Email">
-                    <button type="submit"><img src="./img/arrowright.png" alt="arrow-right"></button>
+                    <input class="mail_input" type="email" id="mail_input" placeholder="Ваш Email">
+                    <button class="mail_button" type="submit">
+                      <img src="./img/arrowright.png" alt="arrow-right">
+                    </button>
                 </div>
             </form>
         </div>
         <div class="sweets_right_side">
-
             <nav>
                 <ul class="list_icon">
                     <li>
-                        <a href="javascript:void(0)"> <img src="img/menu.svg" alt=""> </a>
+                        <a class="nav_icon" href="javascript:void(0)"> <img src="img/menu.svg" alt=""> </a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)"> <img src="img/js.svg" alt=""> </a>
+                        <a class="nav_icon" href="javascript:void(0)"> <img src="img/js.svg" alt=""> </a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)"> <img src="img/linux.svg" alt=""> </a>
+                        <a class="nav_icon" href="javascript:void(0)"> <img src="img/linux.svg" alt=""> </a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)"> <img src="img/css.svg" alt=""> </a>
+                        <a class="nav_icon" href="javascript:void(0)"> <img src="img/css.svg" alt=""> </a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)"> <img src="img/html.svg" alt=""> </a>
+                        <a class="nav_icon" href="javascript:void(0)"> <img src="img/html.svg" alt=""> </a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)"> <img src="img/pyton.svg" alt=""> </a>
+                        <a class="nav_icon" href="javascript:void(0)"> <img src="img/pyton.svg" alt=""> </a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)"> <img src="img/ruby.svg" alt=""> </a>
+                        <a class="nav_icon" href="javascript:void(0)"> <img src="img/ruby.svg" alt=""> </a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)"> <img src="img/php.svg" alt=""> </a>
+                        <a class="nav_icon" href="javascript:void(0)"> <img src="img/php.svg" alt=""> </a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)"> <img src="img/android.svg" alt=""> </a>
+                        <a class="nav_icon" href="javascript:void(0)"> <img src="img/android.svg" alt=""> </a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)"> <img src="img/java.svg" alt=""> </a>
+                        <a class="nav_icon" href="javascript:void(0)"> <img src="img/java.svg" alt=""> </a>
                     </li>
                 </ul>
-              <hr>
+              <hr class="main_hr">
             </nav>
             <ul class="list_framework">
-                <li>
+                <li class="li_right_side">
                     <span class="span_js">#JAVASCRIPT</span>
                     <div class="dots">
                         <h4 class="name_li">Moeditor</h4>
-                        <a href="javascript:void(0)"> <img src="img/dots.svg" alt=""> </a>
+                        <a href="javascript:void(0)">
+                          <img src="img/dots.svg" alt="">
+                        </a>
                     </div>
                     <div class="container_link">
                         <span class="span_CSS">CSS фреймворк та директива від GitHub</span>
                         <button class="link">LINK</button>
                     </div>
-                    <hr>
+                    <hr class="main_hr">
                 </li>
-                <li>
+                <li class="li_right_side">
                     <span class="span_js">#JAVASCRIPT</span>
                     <div class="dots">
                         <h4 class="name_li">waitMe</h4>
-                        <a href="javascript:void(0)"> <img src="img/dots.svg" alt=""> </a>
+                        <a href="javascript:void(0)">
+                          <img src="img/dots.svg" alt="">
+                        </a>
                     </div>
                     <div class="container_link">
                         <span class="span_CSS">CSS фреймворк та директива від GitHub</span>
                         <button class="link">LINK</button>
                     </div>
-                    <hr>
+                    <hr class="main_hr">
                 </li>
-                <li>
+                <li class="li_right_side">
                     <span class="span_js">#JAVASCRIPT</span>
                     <div class="dots">
                         <h4 class="name_li">Primer</h4>
-                        <a href="javascript:void(0)"> <img src="img/dots.svg" alt=""> </a>
+                        <a href="javascript:void(0)">
+                          <img src="img/dots.svg" alt="">
+                        </a>
                     </div>
                     <div class="container_link">
                         <span class="span_CSS">CSS фреймворк та директива від GitHub</span>
                         <button class="link">LINK</button>
                     </div>
-                    <hr>
+                    <hr class="main_hr">
                 </li>
-                <li>
+                <li class="li_right_side">
                     <span class="span_js">#JAVASCRIPT</span>
                     <div class="dots">
                         <h4 class="name_li">Django spurl</h4>
-                        <a href="javascript:void(0)"> <img src="img/dots.svg" alt=""> </a>
+                        <a href="javascript:void(0)">
+                          <img src="img/dots.svg" alt="">
+                        </a>
                     </div>
                     <div class="container_link">
                         <span class="span_CSS">CSS фреймворк та директива від GitHub</span>
                         <button class="link">LINK</button>
                     </div>
-                    <hr>
+                    <hr class="main_hr">
                 </li>
+              <button class="all_candies">Всі 309 цукерочок</button>
             </ul>
-            <button class="all_candies">Всі 309 цукерочок</button>
+
         </div>
     </div>
 </main>
@@ -125,46 +137,46 @@
     <div>
         <div class="footer_lists">
             <div class="left_foot">
-              <ul class="first_ul_footer">
+              <ul class="first_ul_footer all_ul">
                   <li class="title_li">Статті</li>
-                  <li><a href="javascript:void(0)">JavaScript</a></li>
-                  <li><a href="javascript:void(0)">Linux </a></li>
-                  <li><a href="javascript:void(0)">CSS</a></li>
-                  <li><a href="javascript:void(0)">HTML</a></li>
-                  <li><a href="javascript:void(0)">Python</a></li>
-                  <li><a href="javascript:void(0)">Ruby</a></li>
-                  <li><a href="javascript:void(0)">PHP</a></li>
-                  <li><a href="javascript:void(0)">Java</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">JavaScript</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">Linux </a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">CSS</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">HTML</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">Python</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">Ruby</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">PHP</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">Java</a></li>
               </ul>
-              <ul class="second_ul_footer">
+              <ul class="second_ul_footer all_ul">
                   <li class="title_li">Цукерочки</li>
-                  <li><a href="javascript:void(0)">JavaScript</a></li>
-                  <li><a href="javascript:void(0)">Linux</a> </li>
-                  <li><a href="javascript:void(0)">CSS</a></li>
-                  <li><a href="javascript:void(0)">HTML</a></li>
-                  <li><a href="javascript:void(0)">Python</a></li>
-                  <li><a href="javascript:void(0)">Ruby</a></li>
-                  <li><a href="javascript:void(0)">PHP</a></li>
-                  <li><a href="javascript:void(0)">Java</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">JavaScript</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">Linux</a> </li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">CSS</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">HTML</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">Python</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">Ruby</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">PHP</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">Java</a></li>
               </ul>
-              <ul class="third_ul_footer">
+              <ul class="third_ul_footer all_ul">
                   <li class="title_li">Новини</li>
-                  <li><a href="javascript:void(0)">Останні</a></li>
-                  <li><a href="javascript:void(0)">Популярні</a></li>
-                  <li><a href="javascript:void(0)">Дайджести</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">Останні</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">Популярні</a></li>
+                  <li class="all_li"><a class="a_footer" href="javascript:void(0)">Дайджести</a></li>
               </ul>
             </div>
             <div class="right_foot">
               <ul class="connection">
                   <li class="title_li">Зв’язок з редакцією</li>
-                  <li>Загальні питання</li>
-                  <li class="site_mail faq">admin@codeguida.com</li>
+                  <li class="all_li">Загальні питання</li>
+                  <li class="site_mail faq all_li">admin@codeguida.com</li>
                   <li class="cooperation">Співпраця</li>
-                  <li class="site_mail">adv@codeguida.com</li>
+                  <li class="site_mail all_li">adv@codeguida.com</li>
               </ul>
               <ul class="issues">
                   <li class="title_li">Знайшли помилку?</li>
-                  <li class="last">
+                  <li class="last all_li">
                       Знайшли помилку — виділіть в тексті
                       фрагмент з помилкую та нитисніть
                       <span class="site_mail">Ctrl+Enter</span>
