fix issues#1 and issues#2

--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
         <div class="footer_lists">
             <div class="left_foot">
               <ul class="first_ul_footer all_ul">
-                  <li class="title_li">Статті</li>
+                  <span class="title_li">Статті</span>
                   <li class="all_li"><a class="a_footer" href="javascript:void(0)">JavaScript</a></li>
                   <li class="all_li"><a class="a_footer" href="javascript:void(0)">Linux </a></li>
                   <li class="all_li"><a class="a_footer" href="javascript:void(0)">CSS</a></li>
@@ -149,7 +149,7 @@
                   <li class="all_li"><a class="a_footer" href="javascript:void(0)">Java</a></li>
               </ul>
               <ul class="second_ul_footer all_ul">
-                  <li class="title_li">Цукерочки</li>
+                  <span class="title_li">Цукерочки</span>
                   <li class="all_li"><a class="a_footer" href="javascript:void(0)">JavaScript</a></li>
                   <li class="all_li"><a class="a_footer" href="javascript:void(0)">Linux</a> </li>
                   <li class="all_li"><a class="a_footer" href="javascript:void(0)">CSS</a></li>
@@ -160,7 +160,7 @@
                   <li class="all_li"><a class="a_footer" href="javascript:void(0)">Java</a></li>
               </ul>
               <ul class="third_ul_footer all_ul">
-                  <li class="title_li">Новини</li>
+                  <span class="title_li">Новини</li>
                   <li class="all_li"><a class="a_footer" href="javascript:void(0)">Останні</a></li>
                   <li class="all_li"><a class="a_footer" href="javascript:void(0)">Популярні</a></li>
                   <li class="all_li"><a class="a_footer" href="javascript:void(0)">Дайджести</a></li>
@@ -168,14 +168,14 @@
             </div>
             <div class="right_foot">
               <ul class="connection">
-                  <li class="title_li">Зв’язок з редакцією</li>
+                  <span class="title_li">Зв’язок з редакцією</span>
                   <li class="all_li">Загальні питання</li>
-                  <li class="site_mail faq all_li">admin@codeguida.com</li>
+                  <li class="site_mail faq all_li"><a class="site_mail" href="javascript:void(0)">admin@codeguida.com</a></li>
                   <li class="cooperation">Співпраця</li>
-                  <li class="site_mail all_li">adv@codeguida.com</li>
+                  <li class="all_li"><a class="site_mail" href="javascript:void(0)">adv@codeguida.com</li></a>
               </ul>
               <ul class="issues">
-                  <li class="title_li">Знайшли помилку?</li>
+                  <span class="title_li">Знайшли помилку?</span>
                   <li class="last all_li">
                       Знайшли помилку — виділіть в тексті
                       фрагмент з помилкую та нитисніть
