fix issues#1 and issues#2

--- a/src/index.html
+++ b/src/index.html
@@ -160,7 +160,7 @@
                   <li class="all_li"><a class="a_footer" href="javascript:void(0)">Java</a></li>
               </ul>
               <ul class="third_ul_footer all_ul">
-                  <span class="title_li">Новини</li>
+                <span class="title_li">Новини</span>
                   <li class="all_li"><a class="a_footer" href="javascript:void(0)">Останні</a></li>
                   <li class="all_li"><a class="a_footer" href="javascript:void(0)">Популярні</a></li>
                   <li class="all_li"><a class="a_footer" href="javascript:void(0)">Дайджести</a></li>
@@ -170,9 +170,13 @@
               <ul class="connection">
                   <span class="title_li">Зв’язок з редакцією</span>
                   <li class="all_li">Загальні питання</li>
-                  <li class="site_mail faq all_li"><a class="site_mail" href="javascript:void(0)">admin@codeguida.com</a></li>
+                  <li class="site_mail faq all_li">
+                    <a class="site_mail" href="javascript:void(0)">admin@codeguida.com</a>
+                  </li>
                   <li class="cooperation">Співпраця</li>
-                  <li class="all_li"><a class="site_mail" href="javascript:void(0)">adv@codeguida.com</li></a>
+                  <li class="all_li">
+                    <a class="site_mail" href="javascript:void(0)">adv@codeguida.com</a>
+                  </li>
               </ul>
               <ul class="issues">
                   <span class="title_li">Знайшли помилку?</span>
